# imn504

./: README.md
TP2/: CmakeLists.txt  imgui.ini
TP2/src/: Frame.cpp  Frame.h  Node.cpp
TP2/src/GeometricModelLoader/: OBJLoader.h
TP2/src/Materials/DiverseMaterial/: MaterialRotation.h
TP2/src/Materials/ParticuleMaterial/: ParticuleMaterial-FS.glsl  ParticuleMaterial.cpp  Sort.glsl
TP2/src/Materials/PhongMaterial/: PhongMaterial-FS.glsl  PhongMaterial.cpp
src/: CustomModelGL.cpp  CustomModelGL.h  EngineGL.cpp  ModelGL.cpp  ModelGL.h  Node.h
src/GeometricModelLoader/: GeometricModelLoader.h  OBJLoader.cpp
src/Materials/BaseMaterial/: Main-VS.glsl
src/Materials/DiverseMaterial/: MaterialRotation.cpp
src/Materials/ParticuleMaterial/: InitGrid.glsl  ParticuleMaterial-CS.glsl  ParticuleMaterial-VS.glsl  ParticuleMaterial.h  PrefixSum.glsl
src/Materials/PhongMaterial/: PhongMaterial-VS.glsl  PhongMaterial.h
src/Materials/WireMaterial/: Main-VS.glsl  WireMaterial.cpp  WireMaterial.h
vulkan_sandbox504/: .clang-format  .clang-tidy  .gitignore  .root  CMakeLists.txt  imgui.ini
vulkan_sandbox504/libs/EquineEngine/: .clang-tidy  .gitignore  CMakeLists.txt
vulkan_sandbox504/libs/EquineEngine/src/: EngineConfig.hpp  UUID.hpp  callback.hpp  defines.hpp
vulkan_sandbox504/libs/EquineEngine/src/renderer/vulkan/: RHIHelper.hpp  VkUtils.cpp  VkUtils.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanRendererCommandProcessor.cpp  VulkanRendererDefs.hpp  VulkanRendererImGUI.cpp  VulkanRendererObjets.cpp  VulkanRendererUtils.cpp
vulkan_sandbox504/libs/EquineEngine/src/rhi/: CommandList.cpp  CommandList.hpp  Commands.hpp  Instrumentation.hpp  PipelineDesc.cpp  PipelineDesc.hpp  RHIdefines.hpp  ResourceDesc.hpp
vulkan_sandbox504/libs/EquineEngine/src/shader/: managedUBO.hpp  shader.cpp  shader.hpp  shaderUtils.hpp  typetrait.hpp
vulkan_sandbox504/libs/imgui/: CMakeLists.txt
vulkan_sandbox504/shaders/: HE_def.glsl  common.glsl  noise.glsl
vulkan_sandbox504/src/: GLTFLoader.hpp  ObjLoader.hpp  camera.cpp  camera.hpp  config.hpp  edgefriend.cpp  edgefriend.h  main.cpp  thirdparty_implementation.cpp
vulkan_sandbox504/src/application/: Application.cpp  Application.hpp  SubApplication.hpp  SubappsList.hpp
vulkan_sandbox504/src/drawSamples/DrawIndexed/: SubAppDrawIndexed.hpp
vulkan_sandbox504/src/drawSamples/DrawIndexed/shaders/: draw_indexed.frag  draw_indexed.vert  frustum_culling.comp  update.comp
vulkan_sandbox504/src/utils/: Benchmarker.hpp  Generator.hpp  nvidia.cpp  nvidia.hpp  subAppUtils.hpp
